Fixed alignment

--- a/src/css/Watch.css
+++ b/src/css/Watch.css
@@ -11,6 +11,8 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    width: 100%;
+    align-items: center;
 }
 
 .videoWrapper{
@@ -22,12 +24,13 @@
 
 .nowPlaying{
     font-size: 25px;
-    align-items: center;
     font-weight: bold;
+    color: var(--primary-color);
 }
 
 .nowPlaying span{
     font-weight: 300;
+    color: white;
 }
 
 video{
@@ -58,6 +61,7 @@ video{
         font-size: 17px;
     }
     .videoWrapper{
+        background-color: red;
         width: 100%;
         height: 200px;
     }
